--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,7 @@
 
     <dimen name="text_margin">16dp</dimen>
     <dimen name="image_user_size">64dp</dimen>
+    <dimen name="image_user_detail_size">100dp</dimen>
+    <dimen name="margin_8">32dp</dimen>
 
 </resources>
