Change Retrofit call to RxJava subscribe

--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:name="com.blibli.simpleapp.UserFragment"
     tools:context=".UserFragment">
 
@@ -10,5 +11,18 @@
         android:id="@+id/rv_users"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/tv_no_users"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_4"
+        android:text="@string/empty_users"
+        android:textAppearance="?attr/textAppearanceCaption"
+        android:textAlignment="center"
+        android:visibility="gone"
+        />
+
 </FrameLayout>
