--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/margin_4"
-    tools:context=".DetailActivity">
+    tools:context=".ui.DetailActivity">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_user_detail_image"
