Integrate to Dagger and optimize code

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".ui.MainActivity">
+        tools:context=".feature.user.view.main.MainActivity">
 
         <LinearLayout
             android:id="@+id/ll_title"
