--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.UserFragment">
+    tools:context=".feature.user.view.user.UserFragment">
 
     <ScrollView
         android:layout_width="match_parent"
